<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/textView_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_game"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gametitle"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="number"
        android:singleLine="true"
        android:ems="4" >

    </EditText>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initresult"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_b" />

    <Button
        android:id="@+id/button_giveup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giveup" />

    <TextView
        android:id="@+id/textView_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view" />

</LinearLayout>
